@@ -503,12 +503,8 @@ nextresp3:
 		Debug( LDAP_DEBUG_CONNS,
 			"ber_get_next failed.\n", 0, 0, 0 );
 #endif		   
-#ifdef EWOULDBLOCK			
 		if ( err == EWOULDBLOCK ) return LDAP_MSG_X_KEEP_LOOKING;
-#endif
-#ifdef EAGAIN
 		if ( err == EAGAIN ) return LDAP_MSG_X_KEEP_LOOKING;
-#endif
 		ld->ld_errno = LDAP_SERVER_DOWN;
 		--lc->lconn_refcnt;
 		lc->lconn_status = 0;
